--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,44 @@ annotated-types==0.6.0
 anyio==4.2.0
 blinker==1.7.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 distro==1.9.0
+filelock==3.13.1
+fsspec==2024.2.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
+huggingface-hub==0.20.3
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.4
 openai==1.11.1
+packaging==23.2
+pillow==10.2.0
 pyaes==1.6.1
 pydantic==2.6.1
 pydantic_core==2.16.2
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dotenv==1.0.1
+PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+safetensors==0.4.2
 sniffio==1.3.0
+sympy==1.12
 TgCrypto==1.2.5
+tokenizers==0.15.1
+torch==2.2.0
+torchaudio==2.2.0
+torchvision==0.17.0
 tqdm==4.66.1
+transformers==4.37.2
 typing_extensions==4.9.0
+urllib3==2.2.0
 Werkzeug==3.0.1
