--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,9 @@ services:
       - "8001:8001"
     env_file:
       - .env
+    networks:
+      - chatstodo
+
   discord:
     build:
       context: ./discord
@@ -16,3 +19,10 @@ services:
       - "8002:8002"
     env_file:
       - .env
+    networks:
+      - chatstodo
+
+networks:
+  chatstodo:
+    name: chatstodo
+    external: true
