--- a/discord/requirements.txt
+++ b/discord/requirements.txt
@@ -8,10 +8,12 @@ discord==2.3.2
 discord-py-interactions==5.11.0
 discord-typings==0.7.0
 discord.py==2.3.2
+dnspython==2.6.1
 emoji==2.10.1
 frozenlist==1.4.1
 idna==3.6
 multidict==6.0.5
+pymongo==4.6.2
 python-dotenv==1.0.1
 requests==2.31.0
 tomli==2.0.1
