--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,15 @@
 version: "3.8"
 services:
-  telegram:
-    build:
-      context: ./telegram
-      dockerfile: Dockerfile
-    ports:
-      - "8001:8001"
-    env_file:
-      - .env
-    networks:
-      - chatstodo
+  # telegram:
+  #   build:
+  #     context: ./telegram
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8001:8001"
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - chatstodo
 
   discord:
     build:
