--- a/compose.yml
+++ b/compose.yml
@@ -1,26 +1,26 @@
 version: "3.8"
 services:
-  # telegram:
-  #   build:
-  #     context: ./telegram
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8001:8001"
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - chatstodo
-
-  discord:
+  telegram:
     build:
-      context: ./discord
+      context: ./telegram
       dockerfile: Dockerfile
     ports:
-      - "8002:8002"
+      - "8001:8001"
     env_file:
       - .env
     networks:
       - chatstodo
+
+  # discord:
+  #   build:
+  #     context: ./discord
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8002:8002"
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - chatstodo
 
 networks:
   chatstodo:
