--- a/compose.yml
+++ b/compose.yml
@@ -11,16 +11,16 @@ services:
     networks:
       - chatstodo
 
-  # discord:
-  #   build:
-  #     context: ./discord
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8002:8002"
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - chatstodo
+  discord:
+    build:
+      context: ./discord
+      dockerfile: Dockerfile
+    ports:
+      - "8002:8002"
+    env_file:
+      - .env
+    networks:
+      - chatstodo
 
 networks:
   chatstodo:
